# URIC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-run-tests.yml
include/: authority.h  uri.h  url.h
samples/uri-validator/: CMakeLists.txt  main.cpp
samples/url-validator/: CMakeLists.txt  main.cpp
src/: authority.cpp  path_normaliser.h  path_utils.cpp  path_utils.h  token_reader.h  uri.cpp  uri_parser.cpp  uri_parser.h
tests/: authority_tests.cpp  path_normaliser_codeIfNecessary.cpp  path_normaliser_getHierarchicalSegments.cpp  path_normaliser_removeDotSegments.cpp  path_utils_CodeIfNecessary.cpp  path_utils_Normalise.cpp  path_utils_RemoveDotSegments.cpp  path_utils_SplitHierarchicalSegments.cpp  uri_parser_validation_IPLiteral.cpp  uri_parser_validation_IPv4address.cpp  uri_parser_validation_IPv6address.cpp  uri_parser_validation_IPvFuture.cpp  uri_parser_validation_absoluteUri.cpp  uri_parser_validation_authority.cpp  uri_parser_validation_hierPart.cpp  uri_parser_validation_host.cpp  uri_parser_validation_ls32.cpp  uri_parser_validation_path.cpp  uri_parser_validation_pathAbempty.cpp  uri_parser_validation_pathAbsolute.cpp  uri_parser_validation_pathEmpty.cpp  uri_parser_validation_pathNoscheme.cpp  uri_parser_validation_pathRootless.cpp  uri_parser_validation_pchar.cpp  uri_parser_validation_pctEncoded.cpp  uri_parser_validation_port.cpp  uri_parser_validation_queryFragment.cpp  uri_parser_validation_regName.cpp  uri_parser_validation_relativePart.cpp  uri_parser_validation_relativeRef.cpp  uri_parser_validation_scheme.cpp  uri_parser_validation_segment.cpp  uri_parser_validation_segmentNzNc.cpp  uri_parser_validation_uri.cpp  uri_parser_validation_uriReference.cpp  uri_parser_validation_userInfo.cpp  uri_tests.cpp  url_tests.cpp
tests/parser/: uri_parser_validation_IPLiteral.cpp  uri_parser_validation_IPv4address.cpp  uri_parser_validation_absoluteUri.cpp  uri_parser_validation_authority.cpp  uri_parser_validation_decOctet.cpp  uri_parser_validation_h16.cpp  uri_parser_validation_hierPart.cpp  uri_parser_validation_host.cpp  uri_parser_validation_path.cpp  uri_parser_validation_pathAbsolute.cpp  uri_parser_validation_pathEmpty.cpp  uri_parser_validation_pathNoscheme.cpp  uri_parser_validation_pathRootless.cpp  uri_parser_validation_pchar.cpp  uri_parser_validation_pctEncoded.cpp  uri_parser_validation_relativePart.cpp  uri_parser_validation_relativeRef.cpp  uri_parser_validation_segmentNz.cpp  uri_parser_validation_uri.cpp  uri_parser_validation_uriReference.cpp
tests/parser/utils/: parser_test_utils.cpp  parser_test_utils.h
tests/utils/: parser_test_utils.cpp  parser_test_utils.h
